# oa-telemetry-server

./: .gitignore  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  README.md  fly.toml
migrations/: 001_oa_telemetry.sql  002_publishers.sql  003_publisher_metrics.sql  004_click_tokens.sql
src/: config.rs  domain.rs  errors.rs  lib.rs  main.rs  router.rs  state.rs
src/auth/: mod.rs  platform.rs  publisher.rs
src/models/: click_token.rs  event.rs  mod.rs  publisher.rs  session.rs
src/routes/: click_tokens.rs  events.rs  health.rs  internal.rs  mod.rs  publisher.rs  resolve.rs  sessions.rs
src/services/: click_tokens.rs  domain_index.rs  events.rs  mod.rs  publishers.rs  sessions.rs
src/tui/: app.rs  backend.rs  event.rs  main.rs  ui.rs
src/tui/tabs/: dashboard.rs  events.rs  mod.rs  platforms.rs  publishers.rs  resolve.rs  sessions.rs
tests/: test_auth.rs  test_domain.rs  test_events.rs  test_publisher_queries.rs  test_resolve.rs  test_sessions.rs
tests/common/: mod.rs
