[package]
name = "oa-telemetry-server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenAttribution Telemetry processing server — production-grade Rust implementation"
repository = "https://github.com/openattribution-org/telemetry"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oa-telemetry-server"
path = "src/main.rs"

[[bin]]
name = "oa-tui"
path = "src/tui/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
figment = { version = "0.10", features = ["env"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
sha2 = "0.10"
rand = "0.10"
tower-http = { version = "0.6", features = ["cors", "trace"] }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
color-eyre = "0.6"
futures = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
